--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aishwarypatle/Books-Recommender</title>
+  
+    <title>Books-Reccomender</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
@@ -15,6 +21,5 @@
     page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
     teal, blue, blurple, magenta, pink!
     -->
-    <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
   </body>
 </html>
